# xai

./: .cursorignore  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.cursor/rules/: 00-project-overview.mdc  01-repo-structure.mdc  90-secrets-and-ops.mdc
apps/web/: package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/.cursor/rules/: 10-nextjs-standards.mdc
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/experiments/: page.tsx
apps/web/src/app/qa/: page.tsx
apps/web/src/components/: theme-toggle.tsx
apps/web/src/components/experiments/: experiment-detail-client.tsx  experiment-posts.tsx  experiments-hero.tsx  experiments-panel.tsx  run-experiment-button.tsx
apps/web/src/components/market/: add-ticker-form.tsx  correlation-insights.tsx  delete-market-button.tsx  (+10 more)
apps/web/src/lib/: grok.ts  markets.ts  probability-utils.ts  qa.test.ts  qa.ts
docs/: cursor-instructions.md
services/ingestion-worker/: package.json
services/ingestion-worker/scripts/: backfill-usernames.ts
services/ingestion-worker/src/: clear-rules.ts  index.ts  test-stream.ts
services/ml/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/ml/scripts/: retrain.sh
services/ml/src/: __init__.py  app.py  config.py  db.py  etl.py  features.py  train_gbdt.py  train_post_model.py
services/scoring-worker/.cursor/rules/: 31-grok-scoring.mdc
supabase/migrations/: 0001_add_ml_tables.sql  0002_add_author_username.sql  0003_experiments.sql  0004_experiment_posts.sql  0005_experiment_posts_avatar.sql
(+28 files in other folders)
